@@ -666,6 +666,10 @@
         name = "J.R. Blain (Cowboy)"
     [/entry]
     [entry]
+        name = "Jacob Rudolph (rujasu)"
+        comment = "Input history for floating textbox"
+    [/entry]
+    [entry]
         name = "Jan Zvánovec (jaz)"
     [/entry]
     [entry]
