@@ -2010,6 +2010,9 @@ private:
 
 	void menu_handler::send_chat_message(const std::string& message, bool allies_only)
 	{
+		// First, this will change the end of the history vector from a blank string to the most recent input
+		preferences::chat_history().back() = message;
+
 		config cfg;
 		cfg["id"] = preferences::login();
 		cfg["message"] = message;
@@ -2032,12 +2035,14 @@ private:
 		recorder.speak(cfg);
 		add_chat_message(time(NULL), cfg["id"], side, message,
 				private_message ? game_display::MESSAGE_PRIVATE : game_display::MESSAGE_PUBLIC);
-
 	}
 
 
 	void menu_handler::do_search(const std::string& new_search)
 	{
+		// First, this will change the end of the history vector from a blank string to the most recent input
+		preferences::search_history().back() = new_search;
+
 		if(new_search.empty() == false && new_search != last_search_)
 			last_search_ = new_search;
 
@@ -2115,6 +2120,9 @@ private:
 	void menu_handler::do_command(const std::string& str,
 			const unsigned int team_num, mouse_handler& mousehandler)
 	{
+		// First, this will change the end of the history vector from a blank string to the most recent input
+		preferences::command_history().back() = str;
+
 		const std::string::const_iterator i = std::find(str.begin(),str.end(),' ');
 		const std::string cmd(str.begin(),i);
 		const std::string data(i == str.end() ? str.end() : i+1,str.end());
@@ -2326,6 +2334,9 @@ private:
 	void menu_handler::do_ai_formula(const std::string& str,
 			const unsigned int team_num, mouse_handler& mousehandler)
 	{
+		// First, this will change the end of the history vector from a blank string to the most recent input
+		preferences::formula_history().back() = str;
+
 		replay dummy_replay;
 		replay_network_sender dummy_sender(dummy_replay);
 		undo_list dummy_undo;
