@@ -18,6 +18,7 @@ Version 1.5.0-svn:
    * a new city-themed village variation
  * user interface:
    * placement of the counters and displays of the top panel optimized
+   * new history feature for entering searches, chat messages, commands, and AI formulas
  * language and i18n:
    * new translation: Croatian
    * updated translations: Chiense, Czech, Danish, Dutch, French, Galician,
